# confidential-communication

./: .gitignore  NOTE.md
confidential_communication/: pubspec.yaml
confidential_communication/example/: alice.dart  bob.dart
confidential_communication/lib/: confidential_communication.dart
confidential_communication/lib/protobuf/key_exchange/: key_exchange.pb.dart  key_exchange.pbenum.dart  key_exchange.pbjson.dart
confidential_communication/lib/protobuf/message_store/: message_storage.pb.dart  message_storage.pbenum.dart  message_storage.pbgrpc.dart  message_storage.pbjson.dart
grpc-server/: Cargo.toml  build.rs
grpc-server/src/: server.rs
grpc-server/src/protobuf/: helloworld.rs
protos/: key_exchange.proto  message_storage.proto
